GMU-27: Logging improvement